# fastq-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
examples/: alignment_count.rs  bio-count.rs  fastq-count-lz4-thread.rs  fastq-count-thread.rs  fastq-count.rs  multiple-files.rs  readfq.cpp  record_count.rs
examples/c/: parse.c  readfq.cpp
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs  fuzz_target_2.rs  fuzz_target_3.rs  fuzz_target_4.rs
src/: buffer.rs  decode.rs  lib.rs  main.rs  records.rs  thread_reader.rs
