[package]
name = "fastq"
version = "0.3.1"
authors = ["Adrian Seyboldt <adrian.seyboldt@gmail.com>"]
description = "A parser for fastq"
license = "MIT"
repository = "https://github.com/aseyboldt/fastq-rs"
documentation = "https://docs.rs/fastq"

[profile.release]
opt-level = 3

[dependencies]
memchr = ">=0.1"

[dev-dependencies]
parasailors = "^0.3"
lz4 = "^1.20"
bio = "^0.10"
